# strutils

./: .gitignore  CMakeLists.txt  README.md
include/: pathutils.hh  strhash.hh  stringf.hh  strutils.hh
src/: pathutils.cc  stringf.cc  strutils.cc
tests/: CMakeLists.txt  main.cc  test_hash.cc  test_join.cc  test_misc.cc  test_path_join.cc  test_path_split.cc  test_path_splitext.cc  test_replace.cc  test_split.cc  test_stringf.cc  test_strip.cc
